Feat/ control and communication tasks

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -1,2 +1,4 @@
 idf_component_register(SRCS "main.c"
+                             "control_task/control_task.c"
+                             "comm_task/comm_task.c"
                     INCLUDE_DIRS ".")
