--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -1,2 +1,2 @@
-idf_component_register(SRCS "main.c" "keypad.c"
-                    INCLUDE_DIRS ".")
+idf_component_register(SRCS "main.c" "keypad/keypad.c"
+                    INCLUDE_DIRS "." "keypad")
