Feat: Implement WiFi and MQTT initialization with event handling

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,7 @@ settings.json
 claude/
 docs/
 .vscode/settings.json
+
+# Config with real credentials (use config.example.h as template)
+main/config.h
+.vscode/settings.json
