Implemented safe state machine in control_task: States: LOCKED, UNLOCKED, ALARM. Transitions: correct PIN, wrong PIN count, vibration. Implement LED control helpers: set_locked_led(), set_unlocked_led(), set_alarm_led_flashing(). Temporary driver: use serial or timers to force transitions and verify LED behaviour

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -4,4 +4,7 @@ idf_component_register(SRCS "main.c"
                              "queue_manager/queue_manager.c"
                             "json_protocol/json_protocol.c"
                              "keypad/keypad.c"
-                    INCLUDE_DIRS "." "keypad")
+                             "state_machine/state_machine.c"
+                             "led/leds.c"
+                    INCLUDE_DIRS "." "keypad"
+                    )
