Fixes/updating issues

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,7 @@
 {
   "C_Cpp.intelliSenseEngine": "default",
   "idf.espIdfPathWin": "d:\\esp\\v5.5.1\\esp-idf",
-  "idf.pythonInstallPath": "d:\\.espressif\\tools\\idf-python\\3.11.2\\python.exe",
+  "idf.pythonInstallPath": "/opt/homebrew/bin/python3",
   "idf.openOcdConfigs": [
     "board/esp32-wrover-kit-3.3v.cfg"
   ],
@@ -17,5 +17,7 @@
     "--compile-commands-dir=${workspaceFolder}\\build"
   ],
   "cfs.configureWorkspace": "Never",
-  "idf.flashType": "UART"
+  "idf.flashType": "UART",
+  "idf.monitorPort": "/dev/tty.usbserial-10",
+  "idf.port": "/dev/tty.usbserial-10"
 }
