Feat/IIntegrate MPU6050 accelerometer for movement detection and update event handling

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -1,10 +1,11 @@
 idf_component_register(SRCS "main.c"
-                             "control_task/control_task.c"
-                             "comm_task/comm_task.c"
-                             "queue_manager/queue_manager.c"
+                            "control_task/control_task.c"
+                            "comm_task/comm_task.c"
+                            "queue_manager/queue_manager.c"
                             "json_protocol/json_protocol.c"
-                             "keypad/keypad.c"
-                             "state_machine/state_machine.c"
-                             "led/leds.c"
-                    INCLUDE_DIRS "." "keypad"
-                    )
+                            "keypad/keypad.c"
+                            "state_machine/state_machine.c"
+                            "led/leds.c"
+                            "mpu6050/mpu6050.c"
+                       INCLUDE_DIRS "." "keypad"
+                       )
