--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -7,5 +7,8 @@ idf_component_register(SRCS "main.c"
                             "state_machine/state_machine.c"
                             "led/leds.c"
                             "mpu6050/mpu6050.c"
-                       INCLUDE_DIRS "." "keypad"
+                            "pin_manager/pin_manager.c"
+                            "event_publisher/event_publisher.c"
+                            "command_handler/command_handler.c"
+                       INCLUDE_DIRS "." "keypad" "pin_manager" "event_publisher" "command_handler"
                        )
